<resources>
    <string name="app_name">Limpia mi ciudad</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>
    <string name="home">Inicio</string>
    <string name="map">Mapa</string>
    <string name="profile">Perfil</string>
    <string name="report">Denunciar</string>
    <string name="report_list">Denuncias</string>
    <string name="my_complaints">Mis Denuncias</string>
    <string name="nav_header_title">Victor Lopez</string>
    <string name="nav_header_subtitle">vick95mex@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tipo_residuo_hint">Seleccione un tipo...</string>
    <string name="volumen_residuo_hint">Seleccione un volumen...</string>
    <string name="tv_tipo_residuo">Tipo de residuo:</string>
    <string name="tv_volumen_residuo">Volumen de residuo:</string>
    <string name="descripcion_hint">Descripcion:</string>
    <string name="take_picture">Toma una foto:</string>
    <string name="accept">Aceptar</string>
    <string name="collection_tipos_residuo">TiposResiduo</string>
    <string name="collection_volumen_residuo">VolumenResiduo</string>
    <string name="collection_reports">Reports</string>
    <string name="report_success">Denuncia enviada.</string>
    <string name="report_failed">Ocurrio un error, intentelo de nuevo más tarde.</string>
    <string name="report_detail">Detalle de denuncia</string>
    <string name="report_date">Fecha reportada:</string>
    <string name="dialog_loading">Cargando&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="report_aprove">¿Estás seguro que deseas aprobar la denuncia?</string>
    <string name="report_rejected">¿Estás seguro que deseas rechazar la denuncia?</string>
    <string name="report_aprove_success">La denuncia ha sido aprobada con éxito</string>
    <string name="report_rejected_success">La denuncia ha sido rechazada con éxito</string>
    <string name="report_aproving">Aprobando denuncia…</string>
    <string name="report_rejecting">Rechazando denuncia…</string>
    <string name="report_aprove_failed">No se ha podido procesar la solicitud, intente de nuevo más tarde.</string>
    <string name="aceptar_uppercase">ACEPTAR</string>
    <string name="cancelar_uppercase">CANCELAR</string>
    <string name="connection_error">Error de conexión, por favor intente de nuevo.</string>
    <string name="entendido">ENTENDIDO</string>
    <string name="btn_report_reject">RECHAZAR DENUNCIA</string>
    <string name="btn_report_aprove">APROBAR DENUNCIA</string>

</resources>
