<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient_background_2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_photo"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_maps_and_location" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/ll_info_report_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:layout_below="@+id/ll_photo"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_descripcion"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="18dp"
                            android:paddingBottom="15dp"
                            android:textColor="@color/blue2"
                            android:text="@string/descripcion_hint"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/descripcion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/Black"/>


                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_tipo_residuo"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="18dp"
                            android:paddingBottom="15dp"
                            android:textColor="@color/blue2"
                            android:text="@string/tv_tipo_residuo"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tipo_residuo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/Black"/>


                        </LinearLayout>


                        <TextView
                            android:id="@+id/tv_volumen_residuo"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="18dp"
                            android:paddingBottom="15dp"
                            android:textColor="@color/blue2"
                            android:text="@string/tv_volumen_residuo"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/volumen_residuo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/Black"/>


                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_fecha_reportada"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textSize="18dp"
                            android:paddingBottom="15dp"
                            android:textColor="@color/blue2"
                            android:text="@string/report_date"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:paddingBottom="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/fecha_reportada"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:textColor="@color/Black"/>

                        </LinearLayout>

                    </LinearLayout>

                    <com.victorengineer.limpiamiciudad.util.LoadingView
                        android:id="@+id/loading_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:visibility="gone"
                        app:progressColor="@color/primary" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_report_rejected"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/bg_btn_secondary"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:textColor="@color/blue2"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/btn_report_reject"
                    />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>